[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/Levels/Level-2.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Levels/Level-4.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Levels/Level-1.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/GameController.gd" type="Script" id=4]
[ext_resource path="res://scenes/Levels/Level-3.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Levels/Level-5.tscn" type="PackedScene" id=6]
[ext_resource path="res://sprites/cancel.png" type="Texture" id=7]
[ext_resource path="res://sprites/clockwise.png" type="Texture" id=8]
[ext_resource path="res://sprites/cclockwise.png" type="Texture" id=9]
[ext_resource path="res://sprites/play.png" type="Texture" id=10]
[ext_resource path="res://sprites/Ash.ttf" type="DynamicFontData" id=11]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 11 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 11 )

[node name="Game" type="Node2D"]
script = ExtResource( 4 )
levels = [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 2 ), ExtResource( 6 ) ]

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="Actions" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 252.0
margin_bottom = 140.0
mouse_filter = 2

[node name="LevelActions" type="HBoxContainer" parent="CanvasLayer/MarginContainer/Actions"]
margin_right = 248.0
margin_bottom = 22.0
mouse_filter = 2
size_flags_vertical = 0
alignment = 1

[node name="Restart" type="Button" parent="CanvasLayer/MarginContainer/Actions/LevelActions"]
visible = false
margin_left = 73.0
margin_right = 162.0
margin_bottom = 20.0
text = "restart level"

[node name="Score" type="Label" parent="CanvasLayer/MarginContainer/Actions/LevelActions"]
margin_left = 117.0
margin_right = 131.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="MoveActions" type="HBoxContainer" parent="CanvasLayer/MarginContainer/Actions"]
margin_top = 120.0
margin_right = 248.0
margin_bottom = 136.0
grow_vertical = 0
mouse_filter = 2
size_flags_vertical = 10
alignment = 1

[node name="Cancel" type="Button" parent="CanvasLayer/MarginContainer/Actions/MoveActions"]
margin_left = 86.0
margin_right = 102.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
disabled = true
icon = ExtResource( 7 )

[node name="RotateL" type="Button" parent="CanvasLayer/MarginContainer/Actions/MoveActions"]
margin_left = 106.0
margin_right = 122.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
disabled = true
icon = ExtResource( 9 )

[node name="RotateR" type="Button" parent="CanvasLayer/MarginContainer/Actions/MoveActions"]
margin_left = 126.0
margin_right = 142.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
disabled = true
icon = ExtResource( 8 )

[node name="SkipTurn" type="Button" parent="CanvasLayer/MarginContainer/Actions/MoveActions"]
margin_left = 146.0
margin_right = 162.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
icon = ExtResource( 10 )

[node name="Tutorial" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Part1" type="Control" parent="CanvasLayer/Tutorial"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Tutorial/Part1"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 10
custom_constants/margin_left = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Tutorial/Part1/MarginContainer"]
margin_left = 10.0
margin_right = 246.0
margin_bottom = 144.0
mouse_filter = 2
alignment = 1

[node name="Rocks" type="Label" parent="CanvasLayer/Tutorial/Part1/MarginContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 236.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 4 )
text = "Select rocks
to move"
align = 2

[node name="Or" type="Label" parent="CanvasLayer/Tutorial/Part1/MarginContainer/VBoxContainer"]
margin_top = 59.0
margin_right = 236.0
margin_bottom = 98.0
custom_fonts/font = SubResource( 4 )
text = "
or
"
align = 2

[node name="Skip" type="Label" parent="CanvasLayer/Tutorial/Part1/MarginContainer/VBoxContainer"]
margin_top = 102.0
margin_right = 236.0
margin_bottom = 113.0
custom_fonts/font = SubResource( 4 )
text = "Skip Turn"
align = 2

[node name="Part2" type="Control" parent="CanvasLayer/Tutorial"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Cancel" type="Label" parent="CanvasLayer/Tutorial/Part2"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -39.0
custom_fonts/font = SubResource( 4 )
text = "Cancel or Rotate selection

"
align = 1

[connection signal="pressed" from="CanvasLayer/MarginContainer/Actions/LevelActions/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/Actions/MoveActions/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/Actions/MoveActions/RotateL" to="." method="_on_RotateL_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/Actions/MoveActions/RotateR" to="." method="_on_RotateR_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/Actions/MoveActions/SkipTurn" to="." method="_on_SkipTurn_pressed"]
